# belajar-FastAPI

./: .gitignore  README.md  pyproject.toml
src/1_phase/: a_http_req.py  hello_world.py  realtime_communication.py  test_websocket.py
src/2_phase/: lifespan_event.py  middleware.py
src/3_phase/: http_verbs_routing.py  request_response_model.py  request_validation_response_handling.py
src/4_phase/: api_key_auth.py  basic_auth.py  fastapi_security_and_depends.py  jwt_auth.py  role_based_access_control.py
src/4_phase/MidExam/ExpenseTracker/: config.py  main.py  roadmap.md
src/4_phase/MidExam/ExpenseTracker/models/: __init__.py  connection.py
src/5_phase/: custom_middleware.py
src/8_phase/: background_task.py  direct_response.py  file_upload.py  redirecting_response.py  streaming_response.py  websocket_routes.py
