[project]
name = "fastapi-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.4",
    "httpx>=0.27.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic[email]>=2.9.2",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "uvicorn>=0.32.0",
    "websockets>=14.0",
]
